# 3gxtool

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md
includes/: 3gx.hpp  ElfConvert.hpp  cxxopts.hpp  elf.hpp  types.hpp
sources/: ElfConvert.cpp  main.cpp
